--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,6 @@ spring.h2.console.enabled=true
 
 #Flyway database migration.
 spring.flyway.locations=classpath:db-migration
+
+#Disable Swagger UI when goes production mode.
+springdoc.swagger-ui.enabled=false
