Hibernate Search Indexing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.profiles.active=dev
 app.message=This is the main property file.
 spring.jpa.open-in-view=false
 
+# To configure the defaults for all indexes:
+hibernate.search.backend.directory.type = local-filesystem
+
 # Max file size.
 spring.servlet.multipart.max-file-size=50MB
 # Max Request Size
