--- a/pom.xml
+++ b/pom.xml
@@ -134,16 +134,16 @@
             <version>6.1.7.Final</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate.search</groupId>-->
-<!--            <artifactId>hibernate-search-mapper-orm</artifactId>-->
-<!--            <version>6.0.2.Final</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate.search</groupId>-->
-<!--            <artifactId>hibernate-search-backend-lucene</artifactId>-->
-<!--            <version>6.0.2.Final</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.hibernate.search</groupId>
+            <artifactId>hibernate-search-mapper-orm</artifactId>
+            <version>6.0.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.search</groupId>
+            <artifactId>hibernate-search-backend-lucene</artifactId>
+            <version>6.0.2.Final</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa -->
         <dependency>
