Use specific directory
For index outresult.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.profiles.active=dev
 
-app.message=This is the main property file.
+spring.jpa.properties.app.message=This is the main property file.
 spring.jpa.open-in-view=false
 
 # To configure the defaults for all indexes:
-hibernate.search.backend.directory.type = local-filesystem
+spring.jpa.properties.hibernate.search.backend.directory.type = local-filesystem
+spring.jpa.properties.hibernate.search.backend.directory.root = target/lucene
 
 # Max file size.
 spring.servlet.multipart.max-file-size=50MB
