--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.profiles.active=dev
 spring.jpa.properties.app.message=This is the main property file.
 spring.jpa.open-in-view=false
 
-# To configure the defaults for all indexes:
+# Configure Hibernate Search.
 spring.jpa.properties.hibernate.search.backend.directory.type = local-filesystem
 spring.jpa.properties.hibernate.search.backend.directory.root = target/lucene
+spring.jpa.properties.hibernate.search.query.loading.cache_lookup.strategy = persistence-context-then-second-level-cache
 
 # Max file size.
 spring.servlet.multipart.max-file-size=50MB
