Highlight Post implemented
Closes #49 .

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,3 +14,6 @@ spring.flyway.enabled=false
 
 #Enable Swagger UI when goes develop.
 springdoc.swagger-ui.enabled=true
+
+#Debug mode enabled when in development mode.
+debug=true
