--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,16 @@ springdoc.swagger-ui.enabled=true
 
 #Debug mode enabled when in development mode.
 debug=true
+
+#Mail.
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bht.cnpm.bot@gmail.com
+spring.mail.password=GSj2wLj6dx5p9lOl5J%F9A7UFkJMJ6h*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Current website top-level domain.
+#Since this is dev profile, we'll use localhost.
+com.bhtcnpm.website.domain.backend=localhost:8080
+com.bhtcnpm.website.domain.frontend=localhost:3000
