Finish sending email verification

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,5 +28,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Current website top-level domain.
 #Since this is dev profile, we'll use localhost.
-com.bhtcnpm.website.domain.backend=localhost:8080
-com.bhtcnpm.website.domain.frontend=localhost:3000
+website.domain.backend=localhost:8080
+website.domain.frontend=localhost:3000
