Added send mail forgot password

--- a/src/main/resources/documents/emails/emails.properties
+++ b/src/main/resources/documents/emails/emails.properties
@@ -2,3 +2,8 @@ confirmRegistration.emailCode=emailConfirmationMessage
 confirmRegistration.title=X\u00e1c nh\u1eadn th\u00f4ng tin \u0111\u0103ng k\u00fd.
 confirmRegistration.content_text=confirmRegistration_vi.txt
 confirmRegistration.content_html=confirmRegistration_vi.html
+
+forgotPassword.emailCode=forgotPasswordMessage
+forgotPassword.title=\u0110\u1eb7t l\u1ea1i m\u1eadt kh\u1ea9u t\u00e0i kho\u1ea3n
+forgotPassword.content_text=forgotPasswordMessage_vi.txt
+forgotPassword.content_html=forgotPasswordMessage_vi.html
