#68 Email confirmation chức năng cơ bản
Còn thiếu:
+ Captcha.
+ Rate limiting (dời sang một task khác để làm).

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.flyway.enabled=false
 springdoc.swagger-ui.enabled=true
 
 #Debug mode enabled when in development mode.
-debug=true
+#debug=true
 
 #Mail.
 spring.mail.host=smtp.gmail.com
