#68 Captcha (not tested)
Please test before merge.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,6 +26,10 @@ spring.mail.password=GSj2wLj6dx5p9lOl5J%F9A7UFkJMJ6h*
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#Google reCAPTCHA.
+com.google.recaptcha.secret.key=6LcENcUaAAAAABSZpQ3djkdz0Tc1OW-NVsDNbYIe
+com.google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
+
 #Current website top-level domain.
 #Since this is dev profile, we'll use localhost.
 website.domain.backend=localhost:8080
