Finished login/register/forgotPass
+ Added CAPTCHA.
+ Added checkUserExist.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,6 +30,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 com.google.recaptcha.secret.key=6LcENcUaAAAAABSZpQ3djkdz0Tc1OW-NVsDNbYIe
 com.google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
 
+#RESTTemplate
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+
 #Current website top-level domain.
 #Since this is dev profile, we'll use localhost.
 website.domain.backend=localhost:8080
