Initial keycloak integration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,10 +29,20 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Google reCAPTCHA.
 com.google.recaptcha.secret.key=6LcENcUaAAAAABSZpQ3djkdz0Tc1OW-NVsDNbYIe
 com.google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
+com.google.recaptcha.bypass=TRUE
+
+#Keycloak
+keycloak.auth-server-url=http://localhost:8180/auth/
+keycloak.ssl-required=external
+keycloak.realm=BHTCNPM
+keycloak.public-client=true
+keycloak.resource=bhtcnpm-spring-dev
+keycloak.bearer-only=true
+keycloak.confidential-port=0
+keycloak.credentials.secret=1a735884-fecf-405f-967f-022aa80c0a14
 
 #RESTTemplate
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
-
 #Current website top-level domain.
 #Since this is dev profile, we'll use localhost.
 website.domain.backend=localhost:8080
