--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.properties.hibernate.search.backend.directory.type = local-filesystem
 spring.jpa.properties.hibernate.search.backend.directory.root = target/lucene
 spring.jpa.properties.hibernate.search.query.loading.cache_lookup.strategy = persistence-context-then-second-level-cache
 
+spring.devtools.restart.enabled=false
+
 # Max file size.
 spring.servlet.multipart.max-file-size=50MB
 # Max Request Size
