--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,6 +48,13 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 website.domain.backend=localhost:8080
 website.domain.frontend=localhost:3000
 
+#AWS S3 image storage.
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+custom.bucket-name=bhtcnpm
+cloud.aws.credentials.profile-name=dev
+cloud.aws.region.static=ap-southeast-1
+
 #Generate data definition using Spring JPA generation.
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
