--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,62 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+app.message=This is dev property file.
+
+spring.datasource.url=jdbc:p6spy:h2:mem:testdb
+spring.datasource.driverClassName=com.p6spy.engine.spy.P6SpyDriver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.datasource.platform=h2
 
-#Flyway database migration.
-spring.flyway.locations=classpath:db-migration
+jwt.secret=AYJNRQWee*|:]dq<(htHm'DofAM5!Bez@Ny;F4>iEg/I&EL{k0Yt0>W'Qz7Q?V9].O[*qSfk_!T.[S'ZQ=G8%i2QK>sH"^&JAM/g)t[X6OA#^3Offf`{f;*HlxiP:[(a3Xb:d!X5.Vm<9.@$3"-5_bXX7mZm%suN7OmU'EbZSB0;=F$;l3cXvagAUag?C4G+pvk`IwjF!K}r5ba9d([DHX:t*4Iy00tp}v3]kbY0w-:yP-Frlg-5TSj7QYIbm!id_)Up~^$/ue6:mL~1jMtx'<O%OzeoOd|t9y9Wc!kEB]WsJ>163FQ/P";<Yi=ZMdU*Yo08x'deK^"Dt"|!FWq{zbFC1L$a+}(e+qtG/}3tVe6Cvd$@FJiy'Uf/9-A^E.l$o*O9E1w.Z}m83BMo5/h~Ui!`^+{W"|?1#B$kAN&sMa'&6=dv}=xSZ@M:w%4@To[_C*,osa+%84lSYcr0P`OU#ykL@P<&uAfu^5yr5@|,&n%aw@5]jH86|:BVOLtxxuhFWM@1
 
-#Disable Swagger UI when goes production mode.
-springdoc.swagger-ui.enabled=false
+spring.flyway.enabled=false
+
+#Enable Swagger UI when goes develop.
+springdoc.swagger-ui.enabled=true
+
+#Debug mode enabled when in development mode.
+#debug=true
+
+#Mail.
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bht.cnpm.bot@gmail.com
+spring.mail.password=GSj2wLj6dx5p9lOl5J%F9A7UFkJMJ6h*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Google reCAPTCHA.
+com.google.recaptcha.secret.key=6LcENcUaAAAAABSZpQ3djkdz0Tc1OW-NVsDNbYIe
+com.google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
+com.google.recaptcha.bypass=TRUE
+
+#Keycloak
+keycloak.auth-server-url=https://auth.uitstudy.space:8443/auth/
+keycloak.ssl-required=external
+keycloak.realm=BHTCNPM
+keycloak.public-client=true
+keycloak.resource=bhtcnpm-spring-dev
+keycloak.bearer-only=true
+keycloak.confidential-port=0
+keycloak.credentials.secret=1a735884-fecf-405f-967f-022aa80c0a14
+
+#RESTTemplate
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+#Current website top-level domain.
+#Since this is dev profile, we'll use localhost.
+website.domain.backend=localhost:8080
+website.domain.frontend=localhost:3000
+
+#AWS S3 image storage.
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+custom.bucket-name=bhtcnpm
+cloud.aws.credentials.profile-name=dev
+cloud.aws.region.static=ap-southeast-1
+
+#Generate data definition using Spring JPA generation.
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
