--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,7 +32,7 @@ com.google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
 com.google.recaptcha.bypass=TRUE
 
 #Keycloak
-keycloak.auth-server-url=http://localhost:8180/auth/
+keycloak.auth-server-url=https://auth.uitstudy.space:8443/auth/
 keycloak.ssl-required=external
 keycloak.realm=BHTCNPM
 keycloak.public-client=true
@@ -54,6 +54,9 @@ cloud.aws.credentials.secret-key=
 custom.bucket-name=bhtcnpm
 cloud.aws.credentials.profile-name=dev
 cloud.aws.region.static=ap-southeast-1
+
+#Logging.
+logging.file.name=log.log
 
 #Generate data definition using Spring JPA generation.
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
