--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,14 @@
 app.message=This is dev property file.
 
-spring.datasource.url=jdbc:p6spy:h2:mem:testdb
-spring.datasource.driverClassName=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://db-postgresql-sgp1-89846-do-user-9520705-0.b.db.ondigitalocean.com:25060/defaultdb
+spring.datasource.username=doadmin
+spring.datasource.password=wfzz14p5y1imsmzr
+
+spring.datasource.initialization-mode=never
+
 
 jwt.secret=AYJNRQWee*|:]dq<(htHm'DofAM5!Bez@Ny;F4>iEg/I&EL{k0Yt0>W'Qz7Q?V9].O[*qSfk_!T.[S'ZQ=G8%i2QK>sH"^&JAM/g)t[X6OA#^3Offf`{f;*HlxiP:[(a3Xb:d!X5.Vm<9.@$3"-5_bXX7mZm%suN7OmU'EbZSB0;=F$;l3cXvagAUag?C4G+pvk`IwjF!K}r5ba9d([DHX:t*4Iy00tp}v3]kbY0w-:yP-Frlg-5TSj7QYIbm!id_)Up~^$/ue6:mL~1jMtx'<O%OzeoOd|t9y9Wc!kEB]WsJ>163FQ/P";<Yi=ZMdU*Yo08x'deK^"Dt"|!FWq{zbFC1L$a+}(e+qtG/}3tVe6Cvd$@FJiy'Uf/9-A^E.l$o*O9E1w.Z}m83BMo5/h~Ui!`^+{W"|?1#B$kAN&sMa'&6=dv}=xSZ@M:w%4@To[_C*,osa+%84lSYcr0P`OU#ykL@P<&uAfu^5yr5@|,&n%aw@5]jH86|:BVOLtxxuhFWM@1
 
