--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.jpa.properties.app.message=This is the main property file.
 spring.jpa.open-in-view=false
