--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -35,7 +35,7 @@ com.google.recaptcha.bypass=TRUE
 
 #Keycloak
 keycloak.auth-server-url=https://auth.uitstudy.space:8443/auth/
-keycloak.ssl-required=external
+keycloak.ssl-required=none
 keycloak.realm=BHTCNPM
 keycloak.public-client=true
 keycloak.resource=bhtcnpm-spring-dev
