--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -55,6 +55,16 @@ custom.bucket-name=bhtcnpm
 cloud.aws.credentials.profile-name=dev
 cloud.aws.region.static=ap-southeast-1
 
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=${user.home}/ssl/spring-ssl-key.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=b97k43WFKYexB33u
+# The alias mapped to the certificate
+server.ssl.key-alias=bhtcnpm_ssl
+server.ssl.enabled=true
+
 #Generate data definition using Spring JPA generation.
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
