--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -63,7 +63,7 @@ server.ssl.key-store=${user.home}/ssl/spring-ssl-key.p12
 server.ssl.key-store-password=b97k43WFKYexB33u
 # The alias mapped to the certificate
 server.ssl.key-alias=bhtcnpm_ssl
-server.ssl.enabled=true
+server.ssl.enabled=false
 
 #Generate data definition using Spring JPA generation.
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
