Fix bug pg (maybe good).

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 app.message=This is dev property file.
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://db-postgresql-sgp1-89846-do-user-9520705-0.b.db.ondigitalocean.com:25060/defaultdb
